--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href =  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel = "stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
     <body class="extra-mobile-padding">
@@ -19,7 +20,7 @@
                         <li><a href = "index.html">Home</a></li>
                         <li><a href = "about.html">About</a></li>
                         <li><a href = "services.html">Services</a></li>
-                        <li><a href = "#">Portfolio</a></li>
+                        <li><a href = "portfolio.html">Portfolio</a></li>
                         <li><a href = "testimonials.html">Testimonials</a></li>
                         <li><a href = "contact.html">Contact Us</a></li>
                     </ul>
@@ -46,7 +47,7 @@
                         of the project in hand.</p>
                 </div>
                 <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                    <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive img-border"/>
                 </div>
             </div>
         </section>
@@ -54,7 +55,7 @@
             <div class = "add-padding row">
                 <div class = "col-xs-12 col-sm-12 col-md-8 col-md-offset-2">
                     <h6 class = "middle-home-page-headings">Block Laying At One Of Our Building Sites</h6>
-                    <video controls= "controls" preload="metadata">
+                    <video controls= "controls" preload="metadata" class="img-border">
                         <source src="assets/video/block_laying.mp4" type="video/mp4"/>
                     </video>
                 </div>
@@ -81,6 +82,16 @@
                 </div>
                 <div class = "col-sm-4">
                     <p>Connect with us</p>
+                    <ul class = "list-inline social-links">
+                        <li>
+                            <a target = "_blank" href = "#"><i class = "fa fa-facebook"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-twitter"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-linkedin"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-pinterest"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-instagram"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-youtube"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
