--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href =  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel = "stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
     <body class="extra-mobile-padding">
@@ -19,7 +20,7 @@
                         <li><a href = "index.html">Home</a></li>
                         <li><a href = "about.html">About</a></li>
                         <li><a href = "services.html">Services</a></li>
-                        <li><a href = "#">Portfolio</a></li>
+                        <li><a href = "portfolio.html">Portfolio</a></li>
                         <li><a href = "testimonials.html">Testimonials</a></li>
                         <li><a href = "contact.html">Contact Us</a></li>
                     </ul>
@@ -32,9 +33,9 @@
                 </div>
             </div>
             <div class = "add-padding row">
-                <div class = "col-xs-12 col-sm-12">
+                <div class = "col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 push-up">
                     <div ng-app="">
-                        <form name = "myform" class = "form-horizontal form-push-down" onSubmit = "handleClick()">
+                        <form name = "myform" class = "form-horizontal" onSubmit = "handleClick()">
                             <fieldset>
                                 <legend>Contact Us For A Quate</legend>
                                 
@@ -105,6 +106,16 @@
                 </div>
                 <div class = "col-sm-4">
                     <p>Connect with us</p>
+                    <ul class = "list-inline social-links">
+                        <li>
+                            <a target = "_blank" href = "#"><i class = "fa fa-facebook"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-twitter"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-linkedin"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-pinterest"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-instagram"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-youtube"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
