--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href =  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel = "stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
     <body class="extra-mobile-padding">
@@ -50,11 +51,33 @@
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="9"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="10"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="11"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="12"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="13"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="14"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="15"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="16"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="17"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="18"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="19"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="20"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="20"></li>
                           </ol>
                     
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner" role="listbox">
                             <div class="item active">
+                              <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
                               <img src = "assets/images/2portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
                             </div>
                             <div class="item">
@@ -62,6 +85,57 @@
                             </div>
                             <div class="item">
                               <img src = "assets/images/4portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/5portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/6portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/7portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/8portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/9portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/10portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/11portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/12portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/13portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/14portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/15portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/16portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/17portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/18portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/19portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/20portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/21portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
                             </div>
                         </div>
                     </div>
@@ -72,7 +146,7 @@
             <div class = "add-padding row">
                 <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <h6 class = "middle-home-page-headings">Services</h6>
-                    <img src = "assets/images/2portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/> 
+                    <img src = "assets/images/2portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive img-border"/> 
                         <p>We offer a wide range of services including new builds, 
                         roofing, decking, renovations, extensions. We also fit replacement 
                         windows and doors for homes and mobile homes. We build sun rooms, 
@@ -181,6 +255,16 @@
                 </div>
                 <div class = "col-sm-4">
                     <p>Connect with us</p>
+                    <ul class = "list-inline social-links">
+                        <li>
+                            <a target = "_blank" href = "#"><i class = "fa fa-facebook"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-twitter"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-linkedin"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-pinterest"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-instagram"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-youtube"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
