--- a/services.html
+++ b/services.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href =  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel = "stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
     <body>
@@ -17,11 +18,11 @@
                     </div>
                     <ul id = "myCollapsingList" class = "nav navbar-nav collapse navbar-collapse navbar-right">
                         <li><a href = "index.html">Home</a></li>
-                        <li><a href = "#">About</a></li>
+                        <li><a href = "about.html">About</a></li>
                         <li><a href = "services.html">Services</a></li>
-                        <li><a href = "#">Portfolio</a></li>
+                        <li><a href = "portfolio.html">Portfolio</a></li>
                         <li><a href = "testimonials.html">Testimonials</a></li>
-                        <li><a href = "#">Contact Us</a></li>
+                        <li><a href = "contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
         </header>
@@ -176,6 +177,16 @@
                 </div>
                 <div class = "col-sm-4">
                     <p>Connect with us</p>
+                    <ul class = "list-inline social-links">
+                        <li>
+                            <a target = "_blank" href = "#"><i class = "fa fa-facebook"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-twitter"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-linkedin"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-pinterest"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-instagram"></i></a>
+                            <a target = "_blank" href = "#"><i class = "fa fa-youtube"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
