--- a/testimonials.html
+++ b/testimonials.html
@@ -121,12 +121,9 @@
                     <p>Connect with us</p>
                     <ul class = "list-inline social-links">
                         <li>
-                            <a target = "_blank" href = "#"><i class = "fa fa-facebook"></i></a>
-                            <a target = "_blank" href = "#"><i class = "fa fa-twitter"></i></a>
-                            <a target = "_blank" href = "#"><i class = "fa fa-linkedin"></i></a>
-                            <a target = "_blank" href = "#"><i class = "fa fa-pinterest"></i></a>
-                            <a target = "_blank" href = "#"><i class = "fa fa-instagram"></i></a>
-                            <a target = "_blank" href = "#"><i class = "fa fa-youtube"></i></a>
+                            <a target = "_blank" href = "https://www.facebook.com/Code.InstituteIRL/"><i class = "fa fa-facebook"></i></a>
+                            <a target = "_blank" href = "https://twitter.com/codersinstitute?lang=en"><i class = "fa fa-twitter"></i></a>
+                            <a target = "_blank" href = "https://www.linkedin.com/school/code-institute/"><i class = "fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
